--- a/source/CalculadoraDeMedia-UNINTER/FrmInfo.resx
+++ b/source/CalculadoraDeMedia-UNINTER/FrmInfo.resx
@@ -143,12 +143,17 @@ N3 = (APOL1 + APOL2 + APOL3 + APOL4 + APOL5) / 5
 N4 = (AP x 4 + PD x 6) / 10
 Média da Disciplina (MD) = (PO x 30 + N3 x 20 + N4 x 50) / 100
 
-__________________________________________________________________
+____________________________________________
 
 A média do exame pode ser calculada da seguinte maneira:
 
 Média Exame(ME) = (EO x 4 + ED x 6) / 10
-Média Final = (ME + MD) / 2</value>
+Média Final = (ME + MD) / 2
+
+____________________________________________
+
+Página do projeto: 
+https://github.com/gustavokuze/Calculadora-de-medias-UNINTER</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
